--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
     </div>
 
     <nav class="mobile-nav">
-        <a href="https://i-dima.github.io/I-DIMA/" class="nav-item">
+        <a href="https://i-dima.github.io" class="nav-item">
             <span>🏠</span>
             <span>I-DIMA 홈</span>
         </a>
@@ -785,7 +785,7 @@
         <p>원활한 운영을 위해 네이버, 구글 애널리틱스로 방문자 수 등을 집계하고 있습니다</p>
         <p>리스트 업데이트 : 2025.02.20</p>
         <p>제작 : I DIMA 프로젝트</p>
-        <a href="https://i-dima.github.io/I-DIMA/service" target="_blank">(이용약관ㅣ개인정보처리방침)</a>
+        <a href="https://i-dima.github.io/service" target="_blank">(이용약관ㅣ개인정보처리방침)</a>
     </div>
 </div>
 </body>
