--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@ const pinsData = [
     "building": "엔터테인먼트관",
     "floor": "2층",
     "category": "공연시설",
-    "name": "대공연장",
+    "name": "중극장 / 대공연장",
     "address": "",
     "description": "",
     "number": "",
