--- a/index.html
+++ b/index.html
@@ -2962,7 +2962,7 @@ const pinsData = [
     "building": "엔터테인먼트관",
     "floor": "2층",
     "category": "실습실",
-    "name": "스티브슬라브스키극장",
+    "name": "스타니슬라브스키극장",
     "address": "130204",
     "description": "",
     "number": "",
